<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!-- 감정 분석 문구 -->
        <LinearLayout
            android:id="@+id/ll_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="40dp">

            <!-- ooo 님의 감정은 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/serve_color"
                    android:textSize="30dp"
                    tools:text="ㅇㅇㅇ"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="30dp"
                    android:text="@string/your_feeling"
                    />

            </LinearLayout>

            <!-- ㅇㅇ이네요! -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_emotion"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/serve_color"
                    android:textSize="30dp"
                    tools:text="행복"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="30dp"
                    android:text="@string/is_emotion"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@color/ivory_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/recomment_music"/>

            <!-- 노래 추천 2개 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2"
                >

                <!-- 노래 1 -->
                <LinearLayout
                    android:id="@+id/ll_music_1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/iv_thumnail_1"
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@android:drawable/ic_menu_camera" />

                    <TextView
                        android:id="@+id/tv_title_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:padding="4dp"
                        tools:text="에스파 - 넥스트레벨"/>

                </LinearLayout>

                <!-- 노래2 -->
                <LinearLayout
                    android:id="@+id/ll_music_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/iv_thumnail_2"
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@android:drawable/ic_menu_camera" />

                    <TextView
                        android:id="@+id/tv_title_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:padding="4dp"
                        tools:text="NCT127 - 영웅"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <!-- 유튜브 바로 가기 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_music"
                 />

            <Button
                android:id="@+id/bt_youtube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/go_youtube"
                />
        </LinearLayout>

        <!-- 홈으로 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_replay" />

            <Button
                android:id="@+id/bt_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/go_home"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>